docs/tests/parser/structs/valid/StructIndexOperator.src
struct Array {
    operator [](Array a, int idx) {
        return a;
    }
}
