docs/tests/parser/structs/invalid/StructOperatorMissingCloseParen.src
struct Foo {
    operator +(Foo a, Foo b { }
}
